<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">app1food30s</string>
    <string name="default_web_client_id" translatable="false">225251472016-sbmqssqsb8h891fvthlagu4h8hdcscup.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1514836499081410</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1514836499081410</string>
    <string name="facebook_client_token" translatable="false">d316b9c3b1effd42fc963a8b109b0e96</string>
    <string name="txt_uni_address">227 Nguyễn Văn Cừ, phường 4, Quận 5, Thành phố Hồ Chí Minh</string>
    <string name="txt_welcome_back">Welcome Back!</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_remember_me">Remember me</string>
    <string name="txt_forgot_password">Forgot password</string>
    <string name="txt_login">Login</string>
    <string name="txt_no_account">Don\'t have an account?</string>
    <string name="txt_sign_up">Sign up</string>
    <string name="txt_let_get_started">Let\'s get started!</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_home">Home</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_offers">Offers</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_our_menu">Our Menu</string>
    <string name="txt_latest_dishes">Latest Dishes</string>
    <string name="txt_best_sellers">Best Sellers</string>
    <string name="txt_search">Search</string>
    <string name="txt_view_all">View All</string>
    <string name="txt_add">Add</string>
    <string name="txt_details">Details</string>
    <string name="txt_quantity">Quantity :</string>
    <string name="txt_reviews">Reviews</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_my_order">My Orders</string>
    <string name="txt_active_orders">Active Orders</string>
    <string name="txt_order_id">Order ID: # </string>
    <string-array name="txt_delivery_status" translatable="false">
        <item>Pending</item>
        <item>Order accepted</item>
        <item>On delivery</item>
        <item>Delivered</item>
    </string-array>
    <string name="txt_pending_status">Pending</string>
    <string name="txt_order_accepted_status">Order accepted</string>
    <string name="txt_on_delivery_status">On delivery</string>
    <string name="txt_delivered_status">Delivered</string>
    <string name="txt_order_total">Total:&#160;</string>
    <string name="txt_see_order_status">Order Status ></string>
    <string name="txt_previous_orders">Previous Orders</string>
    <string name="txt_order_status">Order status</string>
    <string name="txt_estimated_delivery_time">Estimated delivery time</string>
    <string name="txt_got_your_order">Got your order</string>
    <string name="txt_estimated_minutes">30 minutes</string>
    <string name="txt_pay_now">Pay Now</string>
    <string name="txt_cancel_order">Cancel Order</string>
    <string name="txt_address">Address</string>
    <string name="txt_payment_info">Payment info</string>
    <string name="txt_payment_method">Payment method:&#160;</string>
    <string name="txt_payment_method_2">Payment method</string>
    <string name="txt_payment_status">Status:&#160;</string>
    <string name="txt_order_details">Order details</string>
    <string name="txt_subtotal">Subtotal:&#160;</string>
    <string name="txt_deals">Discounts</string>
    <string name="txt_delivery_charge">Delivery charge</string>
    <string name="txt_total">Total:&#160;</string>
    <string name="txt_category">Category</string>
    <string name="my_profile">My Profile</string>
    <string name="login_to_see_your_info">Login to see your info</string>
    <string name="login">Log In</string>
    <string name="change_language">Change Language</string>
    <string name="txt_manage_order">Manage orders</string>
    <string name="txt_customer_name">Customer:&#160;</string>
    <string name="txt_amount">Amount:&#160;</string>
    <string name="txt_date">Date:&#160;</string>
    <string name="txt_see_order_details">Order Details ></string>
    <string name="txt_payment_type">Payment Type:&#160;</string>
    <string name="txt_order_type">Order Type:&#160;</string>
    <string name="txt_delivery_time">Delivery Time: &#160;</string>
    <string name="txt_unpaid">Unpaid</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_add_product">Add product</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="text_category">Category</string>
    <string name="title_price">Price ($)</string>
    <string name="id_offer">Offer</string>
    <string name="text_stock">Stock</string>
    <string name="txt_create">Create Product</string>
    <string name="txt_description">Description</string>
    <string name="txt_edit_profile">Edit profile</string>
    <string name="txt_my_profile">My profile</string>
    <string name="txt_phone">Mobile Number</string>
    <string name="txt_save">Save</string>
    <string name="text_address">Address</string>
    <string name="txt_all_product">All products</string>
    <string name="txt_manage_products">Manage products</string>
    <string name="ava">ava</string>
    <string name="ic_change_language">ic_change_language</string>
    <string name="log_out">Log Out</string>
    <string name="ic_my_orders">my_orders</string>
    <string name="my_orders">My Orders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ic_edit_profile">ic_edit_profile</string>
    <string name="ic_change_password">ic_change_password</string>
    <string name="change_password">Change Password</string>
    <string name="cart">Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="minus_button">Minus button</string>
    <string name="plus_button">Plus button</string>
    <string name="checkout">Checkout</string>
    <string name="back_button">Back button</string>
    <string name="place_order">Place Order</string>
    <string name="txt_new_product">New product</string>
    <string name="txt_manage_offers">Manage offers</string>
    <string name="txt_manage_categories">Manage categories</string>
    <string name="product_price_number">$%.2f</string>
    <string name="close_button_description">Close button</string>
    <string name="admin_statistics">Admin Statistics</string>
    <string name="txt_stock">"Stock: "</string>
    <string name="txt_dashboard">Dashboard\n</string>
    <string name="txt_orders">Orders</string>
    <string name="txt_products">Products</string>
    <string name="txt_manage">Manage</string>
    <string name="txt_reason">Reason</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_order_id_filter">Order ID</string>
    <string name="txt_status">Status</string>
    <string name="txt_customer">Customer</string>
    <string name="txt_date_filter">Date</string>
    <string name="txt_default_date">dd/MM/yyyy</string>
    <string name="txt_delete_account">Delete account</string>
    <string name="txt_confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="txt_confirm_forgot_password">Are you sure you want to reset your password?</string>
    <string name="txt_required">* Required</string>
    <string name="txt_invalid_email">"* Invalid email address"</string>
    <string name="txt_minimum_password">"* Minimum 6 character password"</string>
    <string name="txt_confirm_password_not_match">* Confirm password does not match</string>
    <string name="txt_delete_email_not_match">* Email does not correct</string>
    <string name="txt_name_product_filter">Name</string>
    <string name="txt_price">Price</string>
    <string name="txt_default_filter_date">Choose date</string>
    <string name="txt_current_password">Current password</string>
    <string name="txt_change_password">Change password</string>
    <string name="txt_let_reset_your_password">Let\'s reset password</string>
    <string-array name="delivery_array" translatable="false">
        <item>Pending</item>
        <item>Order accepted</item>
        <item>On delivery</item>
        <item>Delivered</item>
    </string-array>
    <string-array name="delivery_array_v2" translatable="false">
        <item>Order accepted</item>
        <item>On delivery</item>
        <item>Delivered</item>
    </string-array>
    <string-array name="delivery_array_v3" translatable="false">
        <item>Pending</item>
        <item>Order accepted</item>
        <item>On delivery</item>
        <item>Delivered</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="payment_array" translatable="false">
        <item>Paid</item>
        <item>Unpaid</item>
    </string-array>
    <string name="formatted_currency">%.2f</string>
    <string name="formatted_currency_dollar">$%.2f</string>
    <string name="wishlist_button">Wishlist button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_choose_range_price">Choose range of price</string>
    <string name="txt_choose_category">Choose category</string>
    <string name="txt_choose_offer">Choose offer</string>
    <string name="txt_edit_product">Edit product</string>
    <string name="txt_new_offer">New offer</string>
    <string name="title_discount_rate">Discount rate</string>
    <string name="text_num_product">Number of product</string>
    <string name="txt_create_offer">Create offer</string>
    <string name="txt_edi_offer">Edit offer</string>
    <string name="txt_save_offer">Update offer</string>
    <string name="txt_discount_rate">Discount rate</string>
    <string name="txt_num_product">Number of product</string>
    <string name="txt_choose_discount">Choose discount rate</string>
    <string name="txt_choose_num_product">Choose number of product</string>
    <string name="txt_delete_product">Remove</string>
    <string name="txt_remove_offer">Remove</string>
    <string name="txt_new_category">New category</string>
    <string name="txt_create_category">Create category</string>
    <string name="txt_edi_category">Edit category</string>
    <string name="txt_save_category">Update category</string>
    <string name="cart_button">Cart button</string>
    <string name="txt_category_item_order">Category:&#160;</string>
    <string name="txt_payment">Payment</string>
    <string name="txt_payment_content">Pay for your order</string>
    <string name="txt_cancel_payment">Cancel payment</string>
    <string name="txt_cancel_payment_content">Are you sure you want to cancel your order?</string>
    <string name="txt_has_been_cancelled">Order has been cancelled</string>
    <string name="no_items_added">No items added</string>
    <string name="no_items_in_cart">No items in cart</string>
    <string name="txt_new_password">New password</string>
    <string name="txt_confirm_new_password">Confirm new password</string>
    <string name="txt_no_item_available">No Item Available</string>
    <string name="no_reviews">No reviews yet !</string>
    <string name="related_products_title">May be you\'ll like too</string>
    <string name="txt_no_related_products">No products available !</string>
    <string name="manage_products">Manage products</string>
    <string name="txt_feedback">Enter your feedback</string>
    <string name="txt_review_title">Review</string>
    <string name="txt_submit">Submit</string>
</resources>