<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.my_order.MyOrderDetailsActivity">

    <LinearLayout
        android:id="@+id/linear_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing16"
        android:paddingBottom="@dimen/spacing24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/item_back"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing18"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/txt_order_status"
            android:textSize="@dimen/font_header" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_app_bar"
        app:layout_constraintBottom_toTopOf="@+id/cardControl"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



            <LinearLayout
                android:id="@+id/linear_body_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing16"
                app:layout_constraintTop_toBottomOf="@id/linear_app_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_order_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text="@string/txt_order_id"
                        android:textColor="@color/grey_60"
                        android:textSize="@dimen/font_size16" />

                    <TextView
                        android:id="@+id/tv_order_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text="1402323"
                        android:textColor="@color/ocean_blue"
                        android:textSize="@dimen/font_size16" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="06:14 PM 14-02-2024"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing24"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/txt_estimated_delivery_time"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_size16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/txt_estimated_minutes"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_super_header" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:elevation="@dimen/spacing6"
                    app:lottie_rawRes="@raw/lottie_success_order">

                </com.airbnb.lottie.LottieAnimationView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/txt_got_your_order"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_size16">

                </TextView>

                <include
                    layout="@layout/timeline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing16"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/txt_address"
                    android:textSize="@dimen/font_header" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_uni_address" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing16"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/txt_payment_info"
                    android:textSize="@dimen/font_header" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text="@string/txt_payment_method"
                        android:textColor="@color/grey_60"
                        android:textSize="@dimen/font_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text=" Cash on Delivery"
                        android:textSize="@dimen/font_size16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text="@string/txt_payment_status"
                        android:textColor="@color/grey_60"
                        android:textSize="@dimen/font_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text=" UNPAID"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/font_size16" />
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="@dimen/spacing16"
                app:cardCornerRadius="@dimen/spacing16"
                app:cardElevation="@dimen/spacing4"
                app:contentPadding="@dimen/spacing8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_body_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_semibold"
                        android:text="@string/txt_order_details"
                        android:textSize="@dimen/font_header" />

                    <include layout="@layout/item_order_details" />

                    <include layout="@layout/item_order_details" />

                    <include layout="@layout/item_order_details" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nev_spacing_12"
        app:cardCornerRadius="@dimen/spacing12"
        app:cardElevation="@dimen/spacing12"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing16"
            android:paddingTop="@dimen/spacing8"
            android:paddingBottom="@dimen/spacing20"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/payNowBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing60"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:text="@string/txt_pay_now"
                android:textSize="@dimen/font_size16"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancelOrderBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing60"
                android:layout_marginStart="@dimen/spacing12"
                android:layout_weight="1"
                android:backgroundTint="@color/deep_orange"
                android:text="@string/txt_cancel_order"
                android:textSize="@dimen/font_size16"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>